@@ -371,11 +371,23 @@ argument_list|(
 name|name
 argument_list|)
 decl_stmt|;
+comment|// should be filtered out in getResultSet() method, but check full name here too..
 if|if
 condition|(
 name|procedure
 operator|==
 literal|null
+operator|||
+operator|!
+name|key
+operator|.
+name|equals
+argument_list|(
+name|procedure
+operator|.
+name|getFullyQualifiedName
+argument_list|()
+argument_list|)
 condition|)
 block|{
 return|return;
@@ -477,6 +489,11 @@ condition|(
 name|columnName
 operator|==
 literal|null
+operator|||
+name|columnName
+operator|.
+name|isEmpty
+argument_list|()
 condition|)
 block|{
 if|if
@@ -585,16 +602,30 @@ argument_list|(
 name|columnName
 argument_list|)
 decl_stmt|;
-name|column
-operator|.
-name|setDirection
-argument_list|(
+name|int
+name|direction
+init|=
 name|getDirection
 argument_list|(
 name|type
 argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|direction
+operator|!=
+operator|-
+literal|1
+condition|)
+block|{
+name|column
+operator|.
+name|setDirection
+argument_list|(
+name|direction
 argument_list|)
 expr_stmt|;
+block|}
 name|column
 operator|.
 name|setType
@@ -669,6 +700,16 @@ case|case
 name|DatabaseMetaData
 operator|.
 name|procedureColumnOut
+case|:
+return|return
+name|ProcedureParameter
+operator|.
+name|OUT_PARAMETER
+return|;
+case|case
+name|DatabaseMetaData
+operator|.
+name|procedureColumnReturn
 case|:
 return|return
 name|ProcedureParameter
